# RPCsol_pnl

./: .gitmodules  AUTO_START.sh  DEPLOYMENT_CHECKLIST.md  EXPLAIN.md  FINAL_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  NEW_FILES_MANIFEST.md  PROJECT_SUMMARY.txt  QUICKSTART.md  SCOUT_COMPLETE_SUMMARY.md  SCOUT_DECISION_TREE.md  SCOUT_DEEP_DIVE.md  SCOUT_IMPLEMENTATIONS_GUIDE.md  SCOUT_INTEGRATION_GUIDE.md  SCOUT_ITERATION_PLAN.md  SCOUT_QUICK_START.md  SCOUT_README.md  SCOUT_READY_TO_DEPLOY.txt  SCOUT_RUST_INTEGRATION.md  SCOUT_VERIFY.md  START_HERE.sh  START_NOW.md  _GO.sh  agent.mjs  agent_v2.mjs  aggregate_codex_results.mjs  autoresearch_methods.md  bench_scout_all.mjs  bench_scout_v2.mjs  benchmark_scout.mjs  capability_probe.mjs  compare_codex_methods.mjs  compare_unified_leaderboard.mjs  coordinator.mjs  coordinator_v2.mjs  count_txs.mjs  demo_enriched_tx.mjs  demo_pnl_daily.mjs  demo_portfolio_snapshot.mjs  demo_webhook_sim.mjs  (+86 more)
.claude/: settings.json
.gstack/: browse-audit.jsonl
balanced_version/: MULTIKEY_PLAN.md  README.md  index.html  package.json  sol_balance_router.mjs  test_multikey.mjs
harness/: README.md  agent.py  router.mjs  setup.sh
history/: gen1.json  gen2.json  gen3.json
history_v2/: gen1.json  gen2.json  gen3.json
oliver-course/: _base.html
results/: aggressive-rounds.json  baseline.json  big-budget.json  gen2-budget-15.json  gen2-budget-7.json  gen2-concurrency-16.json  gen2-concurrency-8.json  (+23 more)
sol_balance_scout_rust/: Cargo.toml  README.md
sol_balance_scout_rust/src/: algorithm.rs  lib.rs  main.rs  rpc.rs  types.rs
(+191 files in other folders)
